# plg_sitemap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/plugins/plg_sitemap/: __init__.py  admin.py  manifest.json  models.py  service.py  web.py
src/plugins/plg_sitemap/i18n/cs_CZ/: plg_sitemap.json
src/plugins/plg_sitemap/i18n/en_GB/: plg_sitemap.json
src/plugins/plg_sitemap/templates/admin/plg_sitemap/: _breadcrumbs.html  index.html
tests/: conftest.py  test_sitemap.py
