[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plg_sitemap"
version = "0.1.1"
description = "XML sitemap pro KLUCON CMS"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
